// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"<html>

<head></head>

<body>
    <h1>Hello world!</h1>
</body>

</html>"
`;

exports[`Full page 1`] = `
"<!DOCTYPE html>
<html>

<head>
    <meta charset="utf-8">
    <title></title>
    <link rel="stylesheet" href="./style.css">
    <script src="./script.js" type="module"></script>
</head>

<body>
    <h1>Hello there!</h1>

</body>

</html>"
`;

exports[`Include 1`] = `
"<html>

<head>
    <header>
        <a href="./foo/">Foo!</a>
        <a href="./bar/">Bar?</a>
    </header>
</head>

<body>
    <h1>Hi</h1>
</body>

</html>"
`;

exports[`Markdown 1`] = `
"<html>

<head></head>

<body>
    <h2>This is is a <a href="https://commonmark.org/">Markdown</a> header.</h2>
</body>

</html>"
`;

exports[`Nested Markdown 1`] = `
"<html>

<head></head>

<body>
    <h2>This is is a <a href="https://commonmark.org/">Markdown</a> header.</h2>
    <div>
        <p>This is <em>Markdown nested inside HTML nested inside Markdown nested inside HTML</em>! 🤯</p>

    </div>
</body>

</html>"
`;
